full removal of Snapshot-style reporting